--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url('https://cdn.jsdelivr.net/npm/@picocss/pico@1.5.10/css/pico.min.css');
 
-:root {
-	@apply bg-base-300;
-}
+@tailwind utilities;
