--- a/src/app.css
+++ b/src/app.css
@@ -7,3 +7,9 @@
 html {
 	@apply scroll-smooth;
 }
+
+@media (prefers-color-scheme: dark), (prefers-color-scheme: light) {
+	html {
+		@apply bg-slate-900;
+	}
+}
