--- a/src/lib/assets/presentation.css
+++ b/src/lib/assets/presentation.css
@@ -1,19 +1,27 @@
 .reveal {
-	background: linear-gradient(to right, #aa00ff, #ff00aa);
+	@apply aspect-video bg-gradient-to-br from-pink-500 to-purple-600;
+}
+
+.reveal h1,
+.reveal h2,
+.reveal p,
+.reveal ol li {
+	@apply text-gray-300;
 }
 
 .reveal h1 {
-	@apply text-left text-5xl mb-6;
+	@apply text-left text-6xl mb-10;
 }
 
 .reveal h2 {
-	@apply text-left text-4xl mb-4;
+	@apply text-left text-5xl mb-8;
 }
 
 .reveal p {
-	@apply text-left text-xl mb-4;
+	@apply text-left text-xl  mb-4;
 }
 
-.reveal ol li {
-	@apply text-left text-2xl font-semibold mb-4;
+.reveal ol li,
+.reveal ul li {
+	@apply text-left text-xl mb-6;
 }
