style: update muted border color

--- a/src/lib/style/custom-theme/default/_dark.scss
+++ b/src/lib/style/custom-theme/default/_dark.scss
@@ -16,7 +16,7 @@
 
   // Muted colors
   #{$✨}muted-color: #{$zinc-450};
-  #{$✨}muted-border-color: #{$slate-850};
+  #{$✨}muted-border-color: #{$zinc-850};
 
   // Primary colors
   #{$✨}primary: #{$jade-400};
