style: remove outline in editor

--- a/src/lib/style/app.scss
+++ b/src/lib/style/app.scss
@@ -10,3 +10,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/utilities';
 @import 'tailwindcss/components';
+
+[contenteditable] {
+    @apply outline-none;
+}
