--- a/src/lib/assets/presenter.css
+++ b/src/lib/assets/presenter.css
@@ -1,5 +1,5 @@
 .reveal {
-	@apply text-left aspect-video;
+	@apply aspect-video;
 }
 
 .reveal h1,
@@ -7,22 +7,22 @@
 .reveal p,
 .reveal ol li,
 .reveal ul li {
-	@apply text-gray-300;
+	@apply text-left text-gray-300;
 }
 
 .reveal h1 {
-	@apply text-left text-5xl mb-10;
+	@apply text-5xl mb-10;
 }
 
 .reveal h2 {
-	@apply text-left text-4xl mb-8;
+	@apply text-4xl mb-8;
 }
 
 .reveal p {
-	@apply text-left text-xl  mb-4;
+	@apply text-xl  mb-4;
 }
 
 .reveal ol li,
 .reveal ul li {
-	@apply text-left text-xl mb-6;
+	@apply text-xl mb-6;
 }
