style: update colours

--- a/src/lib/assets/pico-var.css
+++ b/src/lib/assets/pico-var.css
@@ -1,8 +1,10 @@
 :root {
     --primary-teal-450: hsl(159, 97%, 30%);
 
-    --pico-background-color: #23262C;
-    --pico-color: hsl(219, 13%, 79%);
+    /* * main colors ✅ */
+    --pico-background-color: hsl(220, 10%, 15%);
+    --pico-color: hsl(220, 13%, 74%);
+
     --pico-text-selection-color: rgba(1, 170, 255, 0.1875);
     --pico-muted-color: #7b8495;
     --pico-muted-border-color: #202632;
@@ -11,16 +13,16 @@
     --pico-primary: var(--primary-teal-450);
     --pico-primary-background: var(--pico-primary);
     --pico-primary-underline: rgba(1, 170, 255, 0.5);
-    --pico-primary-hover: hsl(159, 97%, 32%);
+    --pico-primary-hover: rgba(var(--primary-teal-450), 0.75);
     --pico-primary-hover-background: hsl(159, 97%, 34%);
     --pico-primary-focus: rgba(1, 170, 255, 0.375);
     --pico-primary-inverse: #fff;
 
     /* * secondary */
-    --pico-secondary: hsl(219, 10%, 40%);
-    --pico-secondary-background: hsl(219, 10%, 40%);
+    --pico-secondary: hsl(220, 10%, 43%);
+    --pico-secondary-background: hsl(220, 10%, 43%);
     --pico-secondary-underline: rgba(150, 158, 175, 0.5);
-    --pico-secondary-hover: #b3b9c5;
+    --pico-secondary-hover: hsl(220, 10%, 45%);
     --pico-secondary-hover-background: hsl(219, 10%, 44%);
     --pico-secondary-focus: rgba(144, 158, 190, 0.25);
     --pico-secondary-inverse: #fff;
@@ -35,6 +37,7 @@
     --pico-contrast-inverse: #000;
     --pico-box-shadow: 0.0145rem 0.029rem 0.174rem rgba(0, 0, 0, 0.01698), 0.0335rem 0.067rem 0.402rem rgba(0, 0, 0, 0.024), 0.0625rem 0.125rem 0.75rem rgba(0, 0, 0, 0.03), 0.1125rem 0.225rem 1.35rem rgba(0, 0, 0, 0.036), 0.2085rem 0.417rem 2.502rem rgba(0, 0, 0, 0.04302), 0.5rem 1rem 6rem rgba(0, 0, 0, 0.06), 0 0 0 0.0625rem rgba(0, 0, 0, 0.015);
 
+    /* * heading */
     --pico-h1-color: #f0f1f3;
     --pico-h2-color: #e0e3e7;
     --pico-h3-color: #c2c7d0;
@@ -54,7 +57,7 @@
     --pico-code-color: #8891a4;
 
     /* * form */
-    --pico-form-element-background-color: #1c212c;
+    --pico-form-element-background-color: hsl(218, 11%, 20%);
     --pico-form-element-selected-background-color: #2a3140;
     --pico-form-element-border-color: #2a3140;
     --pico-form-element-color: #e0e3e7;
@@ -69,20 +72,20 @@
     --pico-range-border-color: #202632;
     --pico-range-active-border-color: #2a3140;
 
-    /* * card */
-    --pico-card-background-color: hsl(220, 10%, 22%);
-    --pico-card-sectioning-background-color: hsl(220, 10%, 20%);
+    /* * card ✅ */
+    --pico-card-background-color: #373C44;
+    --pico-card-sectioning-background-color: #2D3138;
 
     /* * dropdown */
     --pico-dropdown-background-color: #181c25;
     --pico-dropdown-border-color: #202632;
     --pico-dropdown-hover-background-color: #202632;
 
-    /* * modal */
-    --pico-modal-overlay-background-color: rgba(8, 9, 10, 0.75);
+    /* * modal ✅ */
+    --pico-modal-overlay-background-color: hsla(220, 10%, 15%, 0.75);
 
-    /* * progress */
-    --pico-progress-background-color: #202632;
+    /* * progress ✅ */
+    --pico-progress-background-color: hsl(220, 10%, 15%);
 
     /* * icon */
     --pico-icon-valid: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(98, 175, 154)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E");
