--- a/src/lib/assets/pico-var.css
+++ b/src/lib/assets/pico-var.css
@@ -1,94 +1,41 @@
-:root {
-    --primary-teal-450: hsl(159, 97%, 30%);
-
-    /* * main colors ✅ */
-    --pico-background-color: hsl(220, 10%, 15%);
-    --pico-color: hsl(220, 13%, 74%);
-
-    --pico-text-selection-color: rgba(1, 170, 255, 0.1875);
-    --pico-muted-color: #7b8495;
-    --pico-muted-border-color: #202632;
-
-    /* * primary */
-    --pico-primary: var(--primary-teal-450);
-    --pico-primary-background: var(--pico-primary);
-    --pico-primary-underline: rgba(1, 170, 255, 0.5);
-    --pico-primary-hover: rgba(var(--primary-teal-450), 0.75);
-    --pico-primary-hover-background: hsl(159, 97%, 34%);
-    --pico-primary-focus: rgba(1, 170, 255, 0.375);
+/* Indigo color for light color scheme (Default) */
+/* Can be forced with data-theme="light" */
+[data-theme=light],
+:root:not([data-theme=dark]) {
+    --pico-text-selection-color: rgba(148, 134, 225, 0.25);
+    --pico-primary: #655cd6;
+    --pico-primary-background: #524ed2;
+    --pico-primary-underline: rgba(101, 92, 214, 0.5);
+    --pico-primary-hover: #4040bf;
+    --pico-primary-hover-background: #4040bf;
+    --pico-primary-focus: rgba(148, 134, 225, 0.25);
     --pico-primary-inverse: #fff;
+}
 
-    /* * secondary */
-    --pico-secondary: hsl(220, 10%, 43%);
-    --pico-secondary-background: hsl(220, 10%, 43%);
-    --pico-secondary-underline: rgba(150, 158, 175, 0.5);
-    --pico-secondary-hover: hsl(220, 10%, 45%);
-    --pico-secondary-hover-background: hsl(219, 10%, 44%);
-    --pico-secondary-focus: rgba(144, 158, 190, 0.25);
-    --pico-secondary-inverse: #fff;
+/* Indigo color for dark color scheme (Auto) */
+/* Automatically enabled if user has Dark mode enabled */
+@media only screen and (prefers-color-scheme: dark) {
+    :root:not([data-theme]) {
+        --pico-text-selection-color: rgba(162, 148, 229, 0.1875);
+        --pico-primary: #a294e5;
+        --pico-primary-background: #524ed2;
+        --pico-primary-underline: rgba(162, 148, 229, 0.5);
+        --pico-primary-hover: #bdb2ec;
+        --pico-primary-hover-background: #655cd6;
+        --pico-primary-focus: rgba(162, 148, 229, 0.25);
+        --pico-primary-inverse: #fff;
+    }
+}
 
-    /* * contrast */
-    --pico-contrast: #dfe3eb;
-    --pico-contrast-background: #eff1f4;
-    --pico-contrast-underline: rgba(223, 227, 235, 0.5);
-    --pico-contrast-hover: #fff;
-    --pico-contrast-hover-background: #fff;
-    --pico-contrast-focus: rgba(207, 213, 226, 0.25);
-    --pico-contrast-inverse: #000;
-    --pico-box-shadow: 0.0145rem 0.029rem 0.174rem rgba(0, 0, 0, 0.01698), 0.0335rem 0.067rem 0.402rem rgba(0, 0, 0, 0.024), 0.0625rem 0.125rem 0.75rem rgba(0, 0, 0, 0.03), 0.1125rem 0.225rem 1.35rem rgba(0, 0, 0, 0.036), 0.2085rem 0.417rem 2.502rem rgba(0, 0, 0, 0.04302), 0.5rem 1rem 6rem rgba(0, 0, 0, 0.06), 0 0 0 0.0625rem rgba(0, 0, 0, 0.015);
-
-    /* * heading */
-    --pico-h1-color: #f0f1f3;
-    --pico-h2-color: #e0e3e7;
-    --pico-h3-color: #c2c7d0;
-    --pico-h4-color: #b3b9c5;
-    --pico-h5-color: #a4acba;
-    --pico-h6-color: #8891a4;
-    --pico-mark-background-color: #014063;
-    --pico-mark-color: #fff;
-    --pico-ins-color: #62af9a;
-    --pico-del-color: #ce7e7b;
-
-    --pico-button-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
-    --pico-button-hover-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
-
-    --pico-table-row-stripped-background-color: rgba(111, 120, 135, 0.0375);
-    --pico-code-background-color: #1a1f28;
-    --pico-code-color: #8891a4;
-
-    /* * form */
-    --pico-form-element-background-color: hsl(218, 11%, 20%);
-    --pico-form-element-selected-background-color: #2a3140;
-    --pico-form-element-border-color: #2a3140;
-    --pico-form-element-color: #e0e3e7;
-    --pico-form-element-placeholder-color: #8891a4;
-    --pico-form-element-active-background-color: #1a1f28;
-    --pico-form-element-disabled-opacity: 0.5;
-    --pico-form-element-invalid-border-color: #964a50;
-    --pico-form-element-invalid-active-border-color: #b7403b;
-    --pico-form-element-valid-border-color: #2a7b6f;
-    --pico-form-element-valid-active-border-color: #16896a;
-    --pico-switch-background-color: #333c4e;
-    --pico-range-border-color: #202632;
-    --pico-range-active-border-color: #2a3140;
-
-    /* * card ✅ */
-    --pico-card-background-color: #373C44;
-    --pico-card-sectioning-background-color: #2D3138;
-
-    /* * dropdown */
-    --pico-dropdown-background-color: #181c25;
-    --pico-dropdown-border-color: #202632;
-    --pico-dropdown-hover-background-color: #202632;
-
-    /* * modal ✅ */
-    --pico-modal-overlay-background-color: hsla(220, 10%, 15%, 0.75);
-
-    /* * progress ✅ */
-    --pico-progress-background-color: hsl(220, 10%, 15%);
-
-    /* * icon */
-    --pico-icon-valid: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(98, 175, 154)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E");
-    --pico-icon-invalid: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(206, 126, 123)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='12' cy='12' r='10'%3E%3C/circle%3E%3Cline x1='12' y1='8' x2='12' y2='12'%3E%3C/line%3E%3Cline x1='12' y1='16' x2='12.01' y2='16'%3E%3C/line%3E%3C/svg%3E");
-    color-scheme: dark;
+/* Indigo color for dark color scheme (Forced) */
+/* Enabled if forced with data-theme="dark" */
+[data-theme=dark] {
+    --pico-text-selection-color: rgba(162, 148, 229, 0.1875);
+    --pico-primary: #a294e5;
+    --pico-primary-background: #524ed2;
+    --pico-primary-underline: rgba(162, 148, 229, 0.5);
+    --pico-primary-hover: #bdb2ec;
+    --pico-primary-hover-background: #655cd6;
+    --pico-primary-focus: rgba(162, 148, 229, 0.25);
+    --pico-primary-inverse: #fff;
 }
