style: fine tune login page fix #53

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -93,6 +93,18 @@
 		@apply text-2xl font-bold;
 	}
 
+	h4 {
+		@apply text-xl font-bold;
+	}
+
+	h5 {
+		@apply text-lg font-bold;
+	}
+
+	h6 {
+		@apply text-base font-bold;
+	}
+
 	p {
 		@apply text-base;
 	}
