--- a/src/lib/assets/css/editor.css
+++ b/src/lib/assets/css/editor.css
@@ -1,21 +1,3 @@
-.editor h1,
-h2,
-p {
-	@apply text-zinc-700;
-}
-
-.editor h1 {
-	@apply text-xl;
-}
-
-.editor h2 {
-	@apply text-lg;
-}
-
-.editor p {
-	@apply text-sm mb-2;
-}
-
-.editor hr {
-	@apply border-slate-300;
+.editor img {
+	@apply max-h-96 mx-auto;
 }
