style(presenter): add styles for lists

--- a/src/lib/assets/css/presenter.css
+++ b/src/lib/assets/css/presenter.css
@@ -26,3 +26,11 @@
 .reveal ul li {
 	@apply text-xl mb-6;
 }
+
+.reveal ol {
+	@apply list-decimal pl-8;
+}
+
+.reveal ul {
+	@apply list-disc pl-8;
+}
