--- a/src/app.postcss
+++ b/src/app.postcss
@@ -72,6 +72,11 @@
 	* {
 		@apply border-border;
 	}
+
+	html {
+		@apply scroll-smooth;
+	}
+
 	body {
 		@apply bg-background text-foreground;
 	}
