--- a/src/app.css
+++ b/src/app.css
@@ -87,30 +87,30 @@
 
 	/* typography */
 	h1 {
-		@apply text-6xl font-bold leading-tight;
+		@apply text-5xl lg:text-6xl font-bold leading-tight;
 	}
 
 	h2 {
-		@apply text-5xl font-bold leading-tight;
+		@apply text-4xl lg:text-5xl font-bold leading-tight;
 	}
 
 	h3 {
-		@apply text-4xl font-bold;
+		@apply text-3xl lg:text-4xl font-bold;
 	}
 
 	h4 {
-		@apply text-3xl font-bold;
+		@apply text-2xl lg:text-3xl font-bold;
 	}
 
 	h5 {
-		@apply text-2xl font-bold;
+		@apply text-xl lg:text-2xl font-bold;
 	}
 
 	h6 {
-		@apply text-xl font-bold;
+		@apply text-lg lg:text-xl font-bold;
 	}
 
 	p {
-		@apply text-base;
+		@apply text-sm lg:text-base;
 	}
 }
