--- a/src/app.css
+++ b/src/app.css
@@ -87,11 +87,11 @@
 
 	/* typography */
 	h1 {
-		@apply text-5xl lg:text-6xl font-bold leading-tight;
+		@apply text-5xl lg:text-6xl lg:leading-tight font-bold;
 	}
 
 	h2 {
-		@apply text-4xl lg:text-5xl font-bold leading-tight;
+		@apply text-4xl lg:text-5xl font-bold lg:leading-tight;
 	}
 
 	h3 {
