--- a/src/app.css
+++ b/src/app.css
@@ -85,7 +85,7 @@
 		@apply outline-none;
 	}
 
-	/* typography */
+	/* ** typography ** */
 	h1 {
 		@apply text-5xl lg:text-6xl lg:leading-tight font-bold;
 	}
