--- a/src/app.css
+++ b/src/app.css
@@ -3,114 +3,114 @@
 @tailwind utilities;
 
 @layer base {
-	:root {
-		--background: 0 0% 100%;
-		--foreground: 222.2 84% 4.9%;
+    :root {
+        --background: 0 0% 100%;
+        --foreground: 222.2 84% 4.9%;
 
-		--muted: 210 40% 96.1%;
-		--muted-foreground: 215.4 16.3% 46.9%;
+        --muted: 210 40% 96.1%;
+        --muted-foreground: 215.4 16.3% 46.9%;
 
-		--popover: 0 0% 100%;
-		--popover-foreground: 222.2 84% 4.9%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 222.2 84% 4.9%;
 
-		--card: 0 0% 100%;
-		--card-foreground: 222.2 84% 4.9%;
+        --card: 0 0% 100%;
+        --card-foreground: 222.2 84% 4.9%;
 
-		--border: 214.3 31.8% 91.4%;
-		--input: 214.3 31.8% 91.4%;
+        --border: 214.3 31.8% 91.4%;
+        --input: 214.3 31.8% 91.4%;
 
-		--primary: 222.2 47.4% 11.2%;
-		--primary-foreground: 210 40% 98%;
+        --primary: 222.2 47.4% 11.2%;
+        --primary-foreground: 210 40% 98%;
 
-		--secondary: 210 40% 96.1%;
-		--secondary-foreground: 222.2 47.4% 11.2%;
+        --secondary: 210 40% 96.1%;
+        --secondary-foreground: 222.2 47.4% 11.2%;
 
-		--accent: 210 40% 96.1%;
-		--accent-foreground: 222.2 47.4% 11.2%;
+        --accent: 210 40% 96.1%;
+        --accent-foreground: 222.2 47.4% 11.2%;
 
-		--destructive: 0 84.2% 60.2%;
-		--destructive-foreground: 210 40% 98%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 210 40% 98%;
 
-		--ring: 222.2 84% 4.9%;
+        --ring: 222.2 84% 4.9%;
 
-		--radius: 0.5rem;
-	}
+        --radius: 0.5rem;
+    }
 
-	.dark {
-		--background: 222.2 84% 4.9%;
-		--foreground: 210 40% 98%;
+    .dark {
+        --background: 222.2 84% 4.9%;
+        --foreground: 210 40% 98%;
 
-		--muted: 217.2 32.6% 17.5%;
-		--muted-foreground: 215 20.2% 65.1%;
+        --muted: 217.2 32.6% 17.5%;
+        --muted-foreground: 215 20.2% 65.1%;
 
-		--popover: 222.2 84% 4.9%;
-		--popover-foreground: 210 40% 98%;
+        --popover: 222.2 84% 4.9%;
+        --popover-foreground: 210 40% 98%;
 
-		--card: 222.2 84% 4.9%;
-		--card-foreground: 210 40% 98%;
+        --card: 222.2 84% 4.9%;
+        --card-foreground: 210 40% 98%;
 
-		--border: 217.2 32.6% 17.5%;
-		--input: 217.2 32.6% 17.5%;
+        --border: 217.2 32.6% 17.5%;
+        --input: 217.2 32.6% 17.5%;
 
-		--primary: 210 40% 98%;
-		--primary-foreground: 222.2 47.4% 11.2%;
+        --primary: 210 40% 98%;
+        --primary-foreground: 222.2 47.4% 11.2%;
 
-		--secondary: 217.2 32.6% 17.5%;
-		--secondary-foreground: 210 40% 98%;
+        --secondary: 217.2 32.6% 17.5%;
+        --secondary-foreground: 210 40% 98%;
 
-		--accent: 217.2 32.6% 17.5%;
-		--accent-foreground: 210 40% 98%;
+        --accent: 217.2 32.6% 17.5%;
+        --accent-foreground: 210 40% 98%;
 
-		--destructive: 0 62.8% 30.6%;
-		--destructive-foreground: 210 40% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 210 40% 98%;
 
-		--ring: hsl(212.7, 26.8%, 83.9);
-	}
+        --ring: hsl(212.7, 26.8%, 83.9);
+    }
 }
 
 @layer base {
-	* {
-		@apply border-border;
-	}
+    * {
+        @apply border-border;
+    }
 
-	html {
-		@apply scroll-smooth;
-	}
+    html {
+        @apply scroll-smooth;
+    }
 
-	body {
-		@apply bg-background text-foreground;
-	}
+    body {
+        @apply bg-background text-foreground;
+    }
 
-	[contenteditable] {
-		@apply outline-none;
-	}
+    [contenteditable] {
+        @apply outline-none;
+    }
 
-	/* ** typography ** */
-	h1 {
-		@apply text-5xl lg:text-6xl lg:leading-tight font-bold;
-	}
+    /* ** typography ** */
+    h1 {
+        @apply text-5xl font-bold lg:text-6xl lg:leading-tight;
+    }
 
-	h2 {
-		@apply text-4xl lg:text-5xl font-bold lg:leading-tight;
-	}
+    h2 {
+        @apply text-4xl font-bold lg:text-5xl lg:leading-tight;
+    }
 
-	h3 {
-		@apply text-3xl lg:text-4xl font-bold;
-	}
+    h3 {
+        @apply text-3xl font-bold lg:text-4xl;
+    }
 
-	h4 {
-		@apply text-2xl lg:text-3xl font-bold;
-	}
+    h4 {
+        @apply text-2xl font-bold lg:text-3xl;
+    }
 
-	h5 {
-		@apply text-xl lg:text-2xl font-bold;
-	}
+    h5 {
+        @apply text-xl font-bold lg:text-2xl;
+    }
 
-	h6 {
-		@apply text-lg lg:text-xl font-bold;
-	}
+    h6 {
+        @apply text-lg font-bold lg:text-xl;
+    }
 
-	p {
-		@apply text-sm lg:text-base;
-	}
+    p {
+        @apply text-sm lg:text-base;
+    }
 }
