--- a/src/app.css
+++ b/src/app.css
@@ -87,27 +87,27 @@
 
     /* ** typography ** */
     h1 {
-        @apply text-5xl font-bold lg:text-6xl lg:leading-tight;
-    }
-
-    h2 {
         @apply text-4xl font-bold lg:text-5xl lg:leading-tight;
     }
 
-    h3 {
-        @apply text-3xl font-bold lg:text-4xl;
+    h2 {
+        @apply text-3xl font-bold lg:text-4xl lg:leading-tight;
     }
 
-    h4 {
+    h3 {
         @apply text-2xl font-bold lg:text-3xl;
     }
 
-    h5 {
+    h4 {
         @apply text-xl font-bold lg:text-2xl;
     }
 
-    h6 {
+    h5 {
         @apply text-lg font-bold lg:text-xl;
+    }
+
+    h6 {
+        @apply text-base font-bold lg:text-lg;
     }
 
     p {
