Add SplitSlide component to Editor.svelte

--- a/src/routes/presenter/[presentation_id]/presenter.css
+++ b/src/routes/presenter/[presentation_id]/presenter.css
@@ -9,20 +9,20 @@
 }
 
 .reveal h1 {
-    @apply mb-10 text-5xl;
+    @apply mb-8 text-5xl;
 }
 
 .reveal h2 {
-    @apply mb-8 text-4xl;
+    @apply mb-4 text-4xl;
 }
 
 .reveal p {
-    @apply mb-4 text-xl;
+    @apply mb-4 text-lg;
 }
 
 .reveal ol li,
 .reveal ul li {
-    @apply mb-6 text-xl;
+    @apply mb-4 text-lg;
 }
 
 .reveal ol {
@@ -34,5 +34,5 @@
 }
 
 .reveal img {
-    @apply mx-auto mb-4 rounded-lg shadow;
+    @apply mx-auto my-4 rounded-lg shadow;
 }
