--- a/src/app.css
+++ b/src/app.css
@@ -72,7 +72,9 @@
     * {
         @apply border-border;
     }
+}
 
+@layer base {
     html {
         @apply scroll-smooth;
     }
@@ -87,11 +89,11 @@
 
     /* ** typography ** */
     h1 {
-        @apply text-4xl font-bold lg:text-5xl lg:leading-tight;
+        @apply font-serif text-5xl font-bold lg:text-6xl lg:leading-tight;
     }
 
     h2 {
-        @apply text-3xl font-bold lg:text-4xl lg:leading-tight;
+        @apply font-serif text-4xl font-bold lg:text-5xl lg:leading-tight;
     }
 
     h3 {
