--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,7 @@
         --accent: 210 40% 96.1%;
         --accent-foreground: 222.2 47.4% 11.2%;
 
-        --destructive: 0 84.2% 60.2%;
+        --destructive: 0 72.2% 50.6%;
         --destructive-foreground: 210 40% 98%;
 
         --ring: 222.2 84% 4.9%;
@@ -72,6 +72,10 @@
     * {
         @apply border-border;
     }
+
+    body {
+        @apply bg-background text-foreground;
+    }
 }
 
 @layer base {
@@ -90,30 +94,22 @@
 
     /* ** Typography ** */
     h1 {
-        @apply text-4xl font-bold lg:text-5xl lg:leading-tight;
+        @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
     }
 
     h2 {
-        @apply text-3xl font-bold lg:text-4xl lg:leading-tight;
+        @apply scroll-m-20 pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
     }
 
     h3 {
-        @apply text-2xl font-bold lg:text-3xl;
+        @apply scroll-m-20 text-2xl font-semibold tracking-tight;
     }
 
     h4 {
-        @apply text-xl font-semibold lg:text-2xl;
-    }
-
-    h5 {
-        @apply text-lg font-semibold lg:text-xl;
-    }
-
-    h6 {
-        @apply text-base font-semibold lg:text-lg;
+        @apply scroll-m-20 text-xl font-semibold tracking-tight;
     }
 
     p {
-        @apply text-sm lg:text-base;
+        @apply leading-7 [&:not(:first-child)]:mt-6;
     }
 }
