--- a/src/app.css
+++ b/src/app.css
@@ -81,15 +81,15 @@
 	}
 
 	h2 {
-		@apply scroll-m-20 text-3xl font-semibold tracking-tight;
+		@apply scroll-m-20 text-3xl font-semibold tracking-tight lg:text-4xl;
 	}
 
 	h3 {
-		@apply scroll-m-20 text-2xl font-semibold tracking-tight;
+		@apply scroll-m-20 text-2xl font-semibold tracking-tight lg:text-3xl;
 	}
 
 	h4 {
-		@apply scroll-m-20 text-xl font-semibold tracking-tight;
+		@apply scroll-m-20 text-xl font-semibold tracking-tight lg:text-2xl;
 	}
 
 	p {
